force-app/main/default/objects/custom_create200__c/custom_create200__c.object-meta.xml
<CustomObject>
    <label>Custom created object200</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects200</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>