force-app/main/default/objects/custom_create200__c/fields/custom_create_200field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_200field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 200field520</label>
    <type>Checkbox</type>
</CustomField>